--- a/src/_index.html
+++ b/src/_index.html
@@ -29,6 +29,8 @@
         <link rel='stylesheet' type='text/css' href='./css/index.css'>
     </head>
     <body>
+        <file src="drawing.html"></file>
+
         <script type="module" src="./index.js" defer></script>
     </body>
 </html>
