--- a/src/drawing.html
+++ b/src/drawing.html
@@ -8,9 +8,11 @@
         <div id="session" class="session">
             <div id="session-title" class="session-title"></div>
         </div>
+    </div>
+    <div class="canvas-box monitor">
+        <canvas id="monitor" class=""></canvas>
         <button id="run-btn" class="prime_button">run</button>
     </div>
-    <canvas id="monitor" class="monitor"></canvas>
     <!-- <canvas id="encourager" class="encourager"></canvas> -->
     <div id="statistics" class="statistics">
         <div class="input-box">
